# SandBox

./: README.md
Bash/: script.sh
Html_CSS/base_example/: style.css
JavaScript/game_of_life/: core.ts  package.json
Machine_Learning/: ex1.py  ex10.py  ex11.py  ex4.py  ex5.py  ex6.py  ex7.py  requirements.txt  text.txt  train_data_true.txt
Python/algorithms/interview/: step_one.tcv  test_1.py  unique_dict.py
Python/algorithms/leetcode/: binary_search.py  guess_number_higher_or_lower.py  merge_k_sorted_lists.py  number_of_islands.py  path_sum.py  single_number.py
Python/flashlight/: README.md
Python/flashlight/flashlight/: logic.py  serializer.py
Python/frameworks/django/: pyproject.toml
Python/frameworks/django/eskd_base/django_config/: settings.py
Python/frameworks/django/eskd_base/drf_api/: middleware.py  permissions.py  serializer.py  urls.py  views.py
Python/frameworks/django/eskd_base/drf_api/migrations/: 0002_alter_project_title.py  0003_alter_user_projects.py
Python/frameworks/django/py_client/: basic.py
Python/frameworks/fastapi_var1/: .env  base_example.py
Python/frameworks/fastapi_var2/: Dockerfile  gunicorn.service
Python/game_of_life/: init_condition.json
Python/game_of_life/life/: cli_display.py  old_example.py
Python/game_of_life/tests/: test_life.py
Python/infotecs_api/: .gitignore  create_db.sql  pyproject.toml
Python/infotecs_api/geo/: schemas.py
Python/infotecs_api/tests/: repository.py
Python/scpi_socket_server/: pyproject.toml
Python/scpi_socket_server/spectrometer/: __init__.py  core.py
Python/scpi_socket_server/spectrometer/device/: core.py  gpio_wrapper.py  mmaper.py
Python/scpi_socket_server/tests/: echo_test.py  local.py
Python/telegram_news_bot/: .gitignore  Dockerfile  docker-compose.yml  pgadmin4.sh  pyproject.toml  requirements.txt
Python/telegram_news_bot/newsbot/: __init__.py
Rust/: popular_crates.md
Rust/algorithms/: test.py
Rust/game_of_life/: Cargo.toml
Rust/language/: Cargo.toml
bash/: 01_script.sh  02_tutorial.sh  README.md  cli.sh  expressions.sh  functions.sh  iter.sh  pipe.sh  set_builtin.sh  variables.sh
golang/: README.md  memory.md  planner.md  primitives.md
golang/algorithms/: backtracking.go  bianry_search.go  dp1.go  dp2.go  hashing.go  heap.go  linked_list.go  stack.go  trees.go  tries.go  two_pointers.go  window.go
golang/fxdemo/: README.md  go.mod  main.go
golang/language/: api.go  base.go  embedding.go  json_serializing.go  mandelbrot.go  surface.go
golang/myapp/: go.mod
html&css/: README.md
html_css/base_example/: alignment.html  index.html  page.html
javaScript/game_of_life/: core.js  index.js  package-lock.json  patterns_examples.json
k8s/fastapi_service/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
k8s/nanoservice/: Chart.yaml  values.yaml
latex/: README.md
linux/: README.md  Soft.md  base.sh  curl.md  file_system.sh
linux/awk/: README.md  script.awk
linux/bash/: pipe.sh  signals.sh  test.sh
python/: .gitignore  README.md  fizzbuzz.py
python/algorithms_datastruct/: merge_sort.py
python/cli/: Dockerfile  Makefile  pyproject.toml  tox.ini
python/cli/src/: cli.py
python/cli/tests/: test_cli.py
python/cli_base/: pyproject.toml
python/concurrency/: example.py
python/dataclasses/: main.py
python/design_patterns/: adapter.py  builder.py  factory.py  iterator.py  observer.py  singleton.py  strategy.py
python/fastapi_var1/: pyproject.toml
python/fastapi_var1/eskd_base/: __init__.py  database.py  main.py  models.py  oauth2.py
python/fastapi_var1/eskd_base/pg/: .pgpass
python/fastapi_var1/eskd_base/routers/: items.py  users.py
python/fastapi_var2/: docker-compose.yml  docker-db.yaml  nginx.conf  pyproject.toml
python/fastapi_var2/app/: main.py
python/fastapi_var2/app/core/: config.py  security.py
python/fastapi_var2/app/db/: items.py  users.py
python/fastapi_var2/app/endpoints/: auth.py  depends.py  items.py
python/fastapi_var2/app/models/: item.py  user.py
python/fastapi_var2/app/repositories/: items.py  users.py
python/features_3.11/: async_tasks.py  new_types.py  traceback_notes.py
python/flashlight/: pyproject.toml
python/flashlight/flashlight/: main.py  socket_read.py
python/game_of_life/: life_game.py  pyproject.toml
python/game_of_life/life/: __init__.py  core.py
python/geo_api/: .gitignore  Dockerfile  pyproject.toml  script.py
python/geo_api/.github/workflow/: tests.yml
python/geo_api/geo/: __main__.py  db.py  repository.py
python/geo_api/simple_example/: README.md
python/geo_api/tests/: test_simple_geo_script.py
python/language/: context_decorators.py  data.json  dataclass_example.py  decorators.py  function_arguments.py  noobies_examples.py  print_strings.py  pydantic_examples.py  regexp_example.py  typing_examples.py
python/machine_learning/: ex11-orig.py  ex12.py  ex2.py  ex3.py  ex8.py  ex9.py  gradient_descent.py  train_data_false.txt
python/multiprocessing/: main.py
python/my_aiohttp/: README.md  pyproject.toml
python/my_aiohttp/my_aiohttp/: __init__.py  __main__.py
python/my_aiohttp/tests/: test_middleware.py
python/my_cli/: Makefile  pyproject.toml
python/my_dynaconf/: .gitignore  config.py  pyproject.toml  settings.yaml
python/my_dynaconf/src/: main.py
python/my_telebot/: .gitignore  Makefile  README.md  config.py  pyproject.toml
python/my_telebot/deploy/: Dockerfile  docker-compose.yml
python/my_telebot/my_telebot/: example_v1.py  example_v2.py  postgresql_example.py
python/pytest/: main.py  tests.py
python/scpi_socket_server/: device_server_run.py  logging_config.py
python/sql/: file.py  orm.py  query.sql  query_builder.py  raw placeholders.py  raw.py
python/streams/: pycat.py
python/telegram_news_bot/: .dockerignore
rust/: README.md  database_crates.md  popular_crates.md
rust/async/: Cargo.toml
rust/language/: Cargo.toml
rust/language/src/: main.rs
rust/strings/: Cargo.toml
sql/: .gitignore  README.md  docker-compose.yml
sql/postgresql/: README.md  architecture.md  data_organization.md  db_develop.md
(+308 files in other folders)
