[tool.poetry]
name = "py-cli"
version = "0.1.0"
description = ""
authors = ["Daniil Zaytsev <zdanil34@gmail.com>"]
readme = "README.md"
packages = [{include = "py-cli"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_package_cli = 'src.cli:main'