[tool.poetry]
name = "fast-api-2"
version = "0.1.0"
description = ""
authors = ["Daniil Zaytsev <zdanil34@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_2"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.42"
databases = {extras = ["postgresql"], version = "^0.6.1"}
psycopg2-binary = "^2.9.5"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.10.2"}
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
