[tool.poetry]
name = "life"
version = "0.1.1"
description = ""
authors = ["Daniil Zaytsev <zdanil34@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exapmle = "life_game:main"

