[tool.poetry]
name = "my-aiohttp"
version = "0.1.0"
description = ""
authors = ["Daniil Zaytsev <zdanil34@gmail.com>"]
readme = "README.md"
packages = [{include = "my_aiohttp"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-aiohttp = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
