[tool.poetry]
name = "newsbot"
version = "0.1.0"
description = ""
authors = ["Daniil Zaytsev <zdanil34@gmail.com>"]
readme = "README.md"
packages = [{include = "my_telebot"}]
include = ["config.py", "settings.yaml"]


[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.3"
aiogram = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
