[tool.poetry]
name = "my_telebot"
version = "0.1.0"
description = ""
authors = ["Daniil Zaytsev <zdanil34@gmail.com>"]
readme = "README.md"
packages = [{include = "my_telebot"}]
include = ["config.py", "settings.yaml"]


[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.3"
aiogram = "^3.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
ruff = "^0.0.292"
isort = "^5.12.0"
black = "^23.9.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
