[package]
name = "language_features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.0" # strings.rs
tokio = {version = "1.17", features = ["full"]} # async.rs
rand = "0.8.4"
ipaddress = "0.1.2"
